Actualiza metadatos y enlaces en index.html

--- a/index.html
+++ b/index.html
@@ -2,27 +2,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Daniel Fernandez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="multimedia/home.png">
     <title>Inicio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="showcase">
         <header>
-            <h2 class="logo">Daniel Fernandez </h2>
+            <h2 class="Nombre">Daniel Fernandez</h2>
             <div class="container">
                 <nav>
                     <ul>
-                        <li>Funcion</li>
-                        <li>Ejemplos</li>
-                        <li>Ventajas y desventajas</li>
-                        <li>Imagen</li>
-                        <li>Importancia</li>
+                        <li><a href="Paginas/funcion.html">Funcion</a></li>
+                        <li><a href="Paginas/ejemplos.html">Ejemplos</a></li>
+                        <li><a href="Paginas/vyd.html">Pros y contras</a></li>
+                        <li><a href="Paginas/imagen.html">Imagen</a></li>
+                        <li><a href="Paginas/importancia.html">Importancia</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <video src="video/video4.mp4" muted loop autoplay></video>
+        <video src="multimedia/video4.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
             <h2>Virtualización:</h2>
