Actualizada la página Ventajas y Desventajas de la virtualización en servidores

--- a/Paginas/vyd.html
+++ b/Paginas/vyd.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Ventajas y Desventajas de la virtualización</title>
+    <meta name="author" content="Daniel Fernandez">
+    <link rel="icon" type="image/png" href="../multimedia/yes-or-no.png">
+    <link rel="stylesheet" href="../styles.css">
+    <title>Ventajas y Desventajas</title>
 </head>
-
-<body>
-    <h3>Ventajas de la virtualización en servidores:</h3>
-    <ul>
-        <li><b>Ahorro de costos:</b> Reduce la necesidad de comprar y mantener varios servidores físicos.</li>
-        <li><b>Mayor eficiencia:</b> Optimiza el uso de los recursos físicos.</li>
-        <li><b>Escalabilidad:</b> Permite aumentar o disminuir la capacidad de los servidores de forma rápida y
-            sencilla.</li>
-        <li><b>Flexibilidad:</b> Facilita la creación y eliminación de servidores virtuales según las necesidades.</li>
-        <li><b>Seguridad:</b> Permite aislar las aplicaciones y los datos en diferentes VMs, mejorando la seguridad.
-        </li>
-    </ul>
-
-    <h3>Desventajas de la virtualización en servidores:</h3>
-    <ul>
-        <li><b>Costo del software de virtualización:</b> Puede ser elevado, especialmente para grandes empresas.</li>
-        <li><b>Complejidad:</b> Requiere conocimientos técnicos para su administración.</li>
-        <li><b>Dependencia del hipervisor:</b> Si el hipervisor falla, todas las VMs se ven afectadas.</li>
-        <li><b>Rendimiento:</b> Puede afectar el rendimiento del equipo físico si no se configura correctamente.</li>
-    </ul>
+<body style="background-color: rgb(35, 35, 34);">
+    <header style="display: flex; justify-content: center;">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="funcion.html">Funcion</a></li>
+                    <li><a href="ejemplos.html">Ejemplos</a></li>
+                    <li><a href="imagen.html">Imagen</a></li>
+                    <li><a href="importancia.html">Importancia</a></li>
+                </ul>
+            </div>
+    </header>
+    <section class="container-all">
+        <h2 style="text-align: center;">Ventajas y Desventajas de la virtualización en servidores</h2><br>
+        <img class="mg3" src="../multimedia/servidores.jpg" alt="virtualización">
+        <h3>Ventajas</h3><br>
+        <ul>
+            <li><b>Ahorro de costos:</b> Reduce la necesidad de comprar y mantener varios servidores físicos.</li>
+            <li><b>Mayor eficiencia:</b> Optimiza el uso de los recursos físicos.</li>
+            <li><b>Escalabilidad:</b> Permite aumentar o disminuir la capacidad de los servidores de forma rápida y
+                sencilla.</li>
+            <li><b>Flexibilidad:</b> Facilita la creación y eliminación de servidores virtuales según las necesidades.</li>
+            <li><b>Seguridad:</b> Permite aislar las aplicaciones y los datos en diferentes VMs, mejorando la seguridad.
+            </li><br>
+        </ul>
+        <h3>Desventajas</h3><br>
+        <ul>
+            <li><b>Costo del software de virtualización:</b> Puede ser elevado, especialmente para grandes empresas.</li>
+            <li><b>Complejidad:</b> Requiere conocimientos técnicos para su administración.</li>
+            <li><b>Dependencia del hipervisor:</b> Si el hipervisor falla, todas las VMs se ven afectadas.</li>
+            <li><b>Rendimiento:</b> Puede afectar el rendimiento del equipo físico si no se configura correctamente.</li>
+        </ul>
+    </section>
+    <script src="../main.js"></script>
 </body>
-
 </html>
