Actualiza ejemplos.html con enlaces y estilos nuevos

--- a/Paginas/ejemplos.html
+++ b/Paginas/ejemplos.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="author" content="Daniel Fernandez">
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/128/9207/9207639.png">
     <title>Ejemplos de la virtualización</title>
 </head>
 <body>
-    <h2> EJemplos </h2>
-    <ul>
-        <li><b>Pruebas de software:</b> Instalar diferentes sistemas operativos y aplicaciones sin afectar al equipo
-            principal.</li>
-        <li><b>Servidores virtuales:</b> Alojar múltiples servidores en un solo computador físico, ahorrando espacio y
-            costos.</li>
-        <li><b>Entornos de desarrollo:</b> Crear un espacio aislado para trabajar en proyectos sin afectar al resto del
-            sistema.</li>
-        <li><b>Escritorios virtuales:</b> Acceder a un escritorio personal desde cualquier dispositivo con acceso a
-            internet.</li>
-        <li><b>Educación:</b> Crear laboratorios virtuales para que los estudiantes practiquen sin necesidad de equipos
-            físicos.</li>
-    </ul>
-
+    <section class="showcase">
+        <header style="display: flex; justify-content: center;">
+            <div class="container">
+                <nav>
+                    <div>
+                        <ul>
+                            <li><a href="funcion.html">Funcion</a></li>
+                            <li><a href="vyd.html">Pros y contras</a></li>
+                            <li><a href="imagen.html">Imagen</a></li>
+                            <li><a href="importancia.html">Importancia</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <video src="../multimedia/virtu.mp4" muted loop autoplay style="opacity: 1.0;"></video>
+        <div class="overlay"></div>
+        <div class="text">
+            <h2> EJemplos </h2>
+            <br>
+            <ul style= color:aliceblue>
+                <li><b>Pruebas de software:</b> Instalar diferentes sistemas operativos y aplicaciones sin afectar al equipo
+                    principal.</li>
+                <li><b>Servidores virtuales:</b> Alojar múltiples servidores en un solo computador físico, ahorrando espacio y
+                    costos.</li>
+                <li><b>Entornos de desarrollo:</b> Crear un espacio aislado para trabajar en proyectos sin afectar al resto del
+                    sistema.</li>
+                <li><b>Escritorios virtuales:</b> Acceder a un escritorio personal desde cualquier dispositivo con acceso a
+                    internet.</li>
+                <li><b>Educación:</b> Crear laboratorios virtuales para que los estudiantes practiquen sin necesidad de equipos
+                    físicos.</li>
+                    <br>
+            </ul>
+            <a href="../index.html">Inicio</a>
+        </div>
+    </section>
+    <script src="../main.js"></script>
 </body>
-
 </html>
