Actualizada la página de función con contenido y estilos nuevos

--- a/Paginas/funcion.html
+++ b/Paginas/funcion.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title> ¿Cómo funciona la virtualización?</title>
+    <meta name="author" content="Daniel Fernandez">
+    <link rel="stylesheet" href="../styles.css">
+    <title>Funcion</title>
 </head>
-
-<body>
-    <h2>¿Cómo funciona la virtualización?</h2>
-    <p>La virtualización funciona mediante un software llamado hipervisor o VMM (Monitor de Máquina Virtual), que se
-        ejecuta en el hardware físico y permite crear y manejar múltiples máquinas virtuales. Estas máquinas virtuales
-        son aisladas entre sí y pueden ejecutar diferentes sistemas operativos y aplicaciones como si estuvieran en
-        hardware físico independiente.</p>
-</body>
+<body style="background-color: rgb(35, 35, 34);">
+    <header style="display: flex; justify-content: center;">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="ejemplos.html">Ejemplos</a></li>
+                    <li><a href="vyd.html">Pros y contras</a></li>
+                    <li><a href="imagen.html">Imagen</a></li>
+                    <li><a href="importancia.html">Importancia</a></li>
+                </ul>
+            </div>
+    </header>
+    <section class="container-all">
+        <h2 style="text-align: center;">¿Cómo funciona la virtualización?</h2><br>
+        <img class="mg2" src="../multimedia/funcions.jpg" alt="virtualización">
+        <p>La virtualización funciona mediante un software llamado hipervisor o VMM (Monitor de Máquina Virtual), que se
+            ejecuta en el hardware físico y permite crear y manejar múltiples máquinas virtuales. Estas máquinas virtuales
+            son aisladas entre sí y pueden ejecutar diferentes sistemas operativos y aplicaciones como si estuvieran en
+            hardware físico independiente.</p>
+    </section>
+    <script src="../main.js"></script>
 </body>
 </html>
