Actualizada la página de imagen.html con contenido en español

--- a/Paginas/imagen.html
+++ b/Paginas/imagen.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="author" content="Daniel Fernandez">
+    <link rel="icon" type="image/png" href="../multimedia/image.png">
+    <link rel="stylesheet" href="../styles.css">
     <title>Imagen de la virtualización</title>
 </head>
-<body>
-    
+<body style="background-color: rgb(35, 35, 34);">
+    <header style="display: flex; justify-content: center;">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="funcion.html">Funcion</a></li>
+                    <li><a href="ejemplos.html">Ejemplos</a></li>
+                    <li><a href="vyd.html">Pros y contras</a></li>
+                    <li><a href="importancia.html">Importancia</a></li>
+                </ul>
+            </div>
+    </header>
+    <section class="container-all">
+        <h2 style="text-align: center;">Explicacion de la imagen</h2><br>
+        <img class="mg1" src="../multimedia/imagen.jpeg" alt="Representación visual de la virtualización" style="width: 30%;">
+        <p>La siguiente imagen representa una analogía visual del concepto de virtualización.
+        Múltiples máquinas virtuales (cajas pequeñas) dentro de un servidor físico (caja grande).
+        En la imagen, se observa una caja grande que representa un servidor físico. Dentro de ella, hay varias cajas de diferentes tamaños que simbolizan las máquinas virtuales que se ejecutan en el servidor. Esta analogía ilustra cómo la virtualización permite ejecutar múltiples sistemas operativos y aplicaciones en un solo equipo físico, optimizando el uso de recursos y maximizando la eficiencia.</p>
+    </section>
+    <script src="../main.js"></script>
 </body>
 </html>
+
