Actualizada la página de importancia de la virtualización

--- a/Paginas/importancia.html
+++ b/Paginas/importancia.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Importancia de la Virtualización</title>
+    <meta name="author" content="Daniel Fernandez">
+    <link rel="icon" type="image/png" href="../multimedia/threat.png">
+    <link rel="stylesheet" href="../styles.css">
+    <title>Importancia</title>
 </head>
+
 <body>
-    
+    <section class="showcase">
+        <header style="display: flex; justify-content: center;">
+            <div class="container">
+                <nav>
+                    <div>
+                        <ul>
+                            <li><a href="funcion.html">Funcion</a></li>
+                            <li><a href="vyd.html">Pros y contras</a></li>
+                            <li><a href="ejemplos.html">Ejemplos</a></li>
+                            <li><a href="imagen.html">Imagen</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <video src="../multimedia/ejemplo.mp4" muted loop autoplay style="opacity: 1.0;"></video>
+        <div class="overlay"></div>
+        <div class="text">
+            <h2 style="text-align: center;">Importancia de la virtualización</h2>
+            <br>
+            <ul style=color:aliceblue>
+                La virtualización es una herramienta poderosa para optimizar los recursos físicos en el ámbito laboral y
+                personal. Permite:
+                <br>
+                <li><b>Ahorrar dinero:</b> Reduce la necesidad de comprar y mantener equipos físicos.</li>
+                <li><b>Aumentar la eficiencia:</b> Optimiza el uso de los recursos físicos.</li>
+                <li><b>Mejorar la flexibilidad:</b> Permite adaptar la infraestructura informática a las necesidades
+                    cambiantes.</li>
+                <li><b>Facilitar la colaboración:</b> Permite compartir recursos y aplicaciones de forma sencilla.</li>
+                <li><b>Proteger el medio ambiente:</b> Reduce el consumo de energía y recursos naturales.</li>
+            </ul>
+            <br>
+            <a href="../index.html">Inicio</a>
+        </div>
+    </section>
+    <script src="../main.js"></script>
 </body>
 </html>
